# bazelpoc_workspace

./: Cargo.toml  README.md  WORKSPACE
src/p1/: BUILD  Cargo.toml
src/p1/src/: main.rs
src/p2/: BUILD  Cargo.toml
src/p2/src/: main.rs
