[workspace]
members = ["src/p1", "src/p2"]

[workspace.metadata.raze]
workspace_path = "//remote/cargo_workspace/cargo"
targets = ["x86_64-unknown-linux-gnu"]
gen_workspace_prefix = "remote_cargo_workspace"
genmode = "Remote"
default_gen_buildrs = true
experimental_api = true
render_package_aliases = false